# langchain-chainlit-docker-deployment-template

./: Dockerfile  pyproject.toml  requirements.txt
.chainlit/: config.toml
demo_app/: main.py
