[tool.poetry]
name = "langchain-chainlit-docker-template"
version = "0.1.0"
description = "A template langchain Chainlit App with Docker Deployments"
authors = ["Amjad Raza"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_chainlit_docker_deployment_template"}]


[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.299"
openai = "0.28.0" #"0.27.8"
chainlit = "0.7.0"
google-api-python-client = "2.100.0"
chromadb = "^0.4.12"
pysqlite3-binary = "^0.5.2"
html2text = "^2020.1.16"
tiktoken = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
