[tool.poetry]
name = "langchain-chainlit-docker-template"
version = "0.1.0"
description = "A template langchain Chainlit App with Docker Deployments"
authors = ["Danny Key"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_chainlit_docker_deployment_template"}]


[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.311"
openai = "0.28.1" #"0.27.8"
chainlit = "0.7.0"
pysqlite3-binary = "^0.5.2"
html2text = "^2020.1.16"
tiktoken = "^0.5.1"
ipdb = "^0.13.13"
duckduckgo-search = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
