[tool.poetry]
name = "langchain-chainlit-docker-template"
version = "0.1.0"
description = "A template langchain Chainlit App with Docker Deployments"
authors = ["Danny Key"]
license = "MPL-2.0"
readme = "README.md"
packages = [{include = "langchain_chainlit_docker_deployment_template"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.311"
openai = "0.28.1"
chainlit = "0.7.301"
pysqlite3-binary = "^0.5.2"
html2text = "^2020.1.16"
tiktoken = "^0.5.1"
ipdb = "^0.13.13"
duckduckgo-search = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

